--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,10 @@
       rel="icon"
       type="image/x-icon"
     />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/slate/bootstrap.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Entertainment Tracker</title>
