--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/4/slate/bootstrap.min.css"
+      href="https://bootswatch.com/4/sketchy/bootstrap.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
